k8s/shanghai/canary/deployment-canary.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: shprod
  name: wisland-feed-prod-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisland-feed-prod-canary
      version: v2
  template:
    metadata:
      labels:
        app: wisland-feed-prod-canary
        version: v2
    spec:
      imagePullSecrets:
        - name: registry-ali-hangzhou
      containers:
        - name: wisland-feed-prod-canary-server
          image: crpi-hytqalx0cm8oqxr4.cn-hangzhou.personal.cr.aliyuncs.com/mxrag/wisland-feed-prod:server-20250920142148
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3500
              protocol: TCP
          resources:
            limits:
              cpu: 2
              memory: 1Gi
            requests:
              cpu: 0.1
              memory: 100Mi
          livenessProbe:
            tcpSocket:
              port: 3500
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 3500
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - mountPath: /app/.env
              name: volume-wisland-feed-prod
              subPath: .env

        - name: wisland-feed-prod-canary-worker
          image: crpi-hytqalx0cm8oqxr4.cn-hangzhou.personal.cr.aliyuncs.com/mxrag/wisland-feed-prod:worker-20250920142148
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 2
              memory: 1Gi
            requests:
              cpu: 0.1
              memory: 100Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /app/.env
              name: volume-wisland-feed-prod
              subPath: .env

      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 120
      volumes:
        - name: volume-wisland-feed-prod
          secret:
            defaultMode: 420
            secretName: wisland-feed-prod
